container and react warning hotfix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,12 @@ body {
     bottom: 0;
     text-align: center;
     width: 99%;
-    height: 5%;
+    /*height: 5%;*/
 }
 
 .clock {
     font-size: 8.5em;
-    margin-top: 17%;
+    /*margin-top: 17%;*/
 }
 
 .greeting {
