--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -1,6 +1,9 @@
 body{
     width:100%;
     height:100%;
+    color: #fff;
+    text-shadow: 0 1px 5px rgba(0,0,0,.1);
+    caret-color: #fff;
 }
 
 .main{
