--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -4,13 +4,12 @@ body{
 }
 
 .main{
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
     height:100%;
     width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .background{
