fix focus localstorage and move transition css

--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -20,6 +20,9 @@ body{
     justify-content: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.fadeIn{
     animation-name: fadeIn;
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
