--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -45,6 +45,12 @@ body{
     position: absolute;
 }
 
+.bottom-left{
+    bottom:10px;
+    left:10px;
+    position: absolute;
+}
+
 #todo-input{
     width:100%;
     padding:0 15px 5px;
@@ -66,6 +72,9 @@ body{
 .d-up{
     bottom:100%;
     right:6px;
+}
+.s-up{
+    bottom:100%;
 }
 .d-down{
     background: rgb(15,15,15);
@@ -138,4 +147,8 @@ body{
 :-ms-input-placeholder,
 :-moz-placeholder{
   color: white;
+}
+
+.getUser{
+    cursor: pointer;
 }
