--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -346,7 +346,7 @@ input[type=text]#focus-item {
     font-weight: normal;
 }
 
-.city-holder, .more-options-ellipsis-wrapper, .large-weather-icon, .large-current-temperature {
+.city-holder, .large-weather-icon, .large-current-temperature {
     width: 50%;
     display: inline-block;
     height: 100%;
