--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -1,8 +1,12 @@
 body{
     width:100%;
     height:100%;
-    color: #fff;
-    text-shadow: 0 1px 5px rgba(0,0,0,.1);
+    color: rgb(255,255,255);
+    text-shadow:
+    1px 1px 1px rgb(0,0,0),
+    1px -1px 1px rgb(0,0,0),
+    -1px -1px 1px rgb(0,0,0),
+    -1px 1px 1px rgb(0,0,0);
 }
 
 .main{
@@ -75,6 +79,7 @@ ul, ol {
     width:300px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.925);
     color:white;
+    text-shadow:none;
     z-index: 0;
 }
 
@@ -90,10 +95,18 @@ ul, ol {
 
 .todo-btn{
     background: transparent;
-    border: none !important;
+    border: none;
     text-decoration: none;
+    color: rgb(255,255,255);
     box-shadow:none !important;
-    color: white;
+}
+.btn-dropUp{
+        color: rgb(255,255,255);
+    text-shadow:
+    1px 1px 1px rgb(0,0,0),
+    1px -1px 1px rgb(0,0,0),
+    -1px -1px 1px rgb(0,0,0),
+    -1px 1px 1px rgb(0,0,0);
 }
 .todo-panel-o{
     display: none;
@@ -217,6 +230,12 @@ ul, ol {
     left:10px;
     position: absolute;
 }
+.settings-btn{
+    background: transparent;
+    color: rgb(255,255,255);
+    text-shadow: 1px 1px 1px rgb(0,0,0), 1px -1px 1px rgb(0,0,0), -1px -1px 1px rgb(0,0,0), -1px 1px 1px rgb(0,0,0);
+}
+
 .s-up{
     bottom:100%;
 }
@@ -255,6 +274,7 @@ ul, ol {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.925);
     color:white;
     z-index: 0;
+    text-shadow:none;
 }
 .login-nav{
     bottom:0;
@@ -358,7 +378,8 @@ ul, ol {
     cursor: pointer;
     opacity: 0.6
 }
-.toggle-options.active{
+.toggle-options.active,
+.picSub.active{
     opacity: 1 !important
 }
 /****************** Like Button ******************/
