--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -234,6 +234,7 @@ ul, ol {
     background: transparent;
     color: rgb(255,255,255);
     text-shadow: 1px 1px 1px rgb(0,0,0), 1px -1px 1px rgb(0,0,0), -1px -1px 1px rgb(0,0,0), -1px 1px 1px rgb(0,0,0);
+    box-shadow:none !important;
 }
 
 .s-up{
