rearrange index / fix minor bugs / add loading screen for data pull

--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -62,6 +62,7 @@ ul, ol {
     bottom:10px;
     right:0;
     position: absolute;
+        outline:none;
 }
 
 
@@ -203,7 +204,7 @@ ul, ol {
 
 .BGTextWrapper{
     animation-name: reset;
-    width: 250px;
+    width: 300px;
 }
 
 .BGTextWrapper:hover{
@@ -228,6 +229,7 @@ ul, ol {
     bottom:10px;
     left:10px;
     position: absolute;
+    outline:none;
 }
 .settings-btn {
     background: transparent;
