--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -10,6 +10,7 @@ body {
     position: absolute;
     top: 15px;
     left: 15px;
+    outline:none;
 }
 .links-wrapper button {
     border: none;
@@ -29,6 +30,7 @@ body {
     margin: 10px 0 0 0;
     padding: 10px;
     width: 240px;
+
 }
 #links-panel a {
     color:#fff;
