--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -529,6 +529,7 @@ input[type=text]#focus-item {
 
 .current-weather-description {
     width: 50%;
+    font-size: .9em;
 }
 
 /** Weather Settings Classes **/
