--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -397,6 +397,12 @@ input[type=text]#focus-item {
 
 /** Weather Classes **/
 
+.test1 {
+    position: absolute;
+    top: 100%;
+    right: 300%;
+}
+
 .weather-wrapper {
     position: absolute;
     top: 1%;
